Hide overflow to prevent border clipping issues.

--- a/js/tinymce/skins/kindling/TinyMCE.less
+++ b/js/tinymce/skins/kindling/TinyMCE.less
@@ -2,6 +2,9 @@
 	// Avoid FOUC
 	visibility: visible !important;
 	position: relative;
+
+	// Seems to prevent occasional overflow issues.
+	overflow: hidden !important;
 }
 
 .mce-fullscreen {
